module_api单独做application时方法数超64k问题解决：gradle添加声明multiDexEnabled true

--- a/module_api/build.gradle
+++ b/module_api/build.gradle
@@ -29,6 +29,9 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        /** 方法数64k */
+        multiDexEnabled true
+
     }
 
     lintOptions {
