--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,12 +75,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.1'
+    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02"
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     implementation project(':app_base')
 
     /* 组件化模块配置 */
@@ -98,6 +100,9 @@ dependencies {
     }
     if (!rootProject.ext.debug_module_apis) {
         implementation project(':module_apis')
+    }
+    if (!rootProject.ext.debug_module_work_demo) {
+        implementation project(':module_work_demo')
     }
 
     /* 极光推送 */
