--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -4,7 +4,6 @@ android {
     compileSdkVersion 28
 
 
-
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 28
@@ -62,14 +61,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.1'
+    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02"
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    api "com.google.android.material:material:1.1.0-alpha03"
+    api "com.google.android.material:material:1.1.0-alpha04"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
@@ -90,8 +89,8 @@ dependencies {
     api "com.squareup.retrofit2:converter-gson:2.4.0"
     api "com.squareup.retrofit2:converter-scalars:2.3.0"
     /**/
-    api "io.reactivex.rxjava2:rxjava:2.2.0"
-    api "io.reactivex.rxjava2:rxandroid:2.0.2"
+    api "io.reactivex.rxjava2:rxjava:2.2.3"
+    api "io.reactivex.rxjava2:rxandroid:2.1.0"
     /**/
     api "com.squareup.retrofit2:adapter-rxjava:2.4.0"
     api "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
@@ -112,12 +111,16 @@ dependencies {
     /**/
     api "org.greenrobot:greendao:3.2.2"
     /**/
-    debugApi "com.squareup.leakcanary:leakcanary-android:1.5.4"
+    debugApi "com.squareup.leakcanary:leakcanary-android:1.6.2"
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.5.4"
-    /**/
-    api "androidx.room:room-runtime:2.1.0-alpha04"
-//    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04" // use kapt for Kotlin
-//    api "androidx.room:room-rxjava2:2.1.0-alpha04"
-//    api "androidx.room:room-guava:2.1.0-alpha04"
-//    testImplementation "androidx.room:room-testing:2.1.0-alpha04"
+    /* room */
+//    def room_version = "2.0.0-beta01"
+//    implementation "androidx.room:room-runtime:$room_version"
+//    annotationProcessor "androidx.room:room-compiler:$room_version" // use kapt for Kotlin
+//    // optional - RxJava support for Room
+//    implementation "androidx.room:room-rxjava2:$room_version"
+//    // optional - Guava support for Room, including Optional and ListenableFuture
+//    implementation "androidx.room:room-guava:$room_version"
+//    // Test helpers
+//    testImplementation "androidx.room:room-testing:$room_version"
 }
