--- a/module_api/build.gradle
+++ b/module_api/build.gradle
@@ -73,12 +73,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.1'
+    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02"
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation project(':app_base')
 
     /* ARouter */
@@ -91,5 +91,16 @@ dependencies {
     // 今日头条顶部刷新控件依赖
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
 
-//    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
+    // room
+    implementation "androidx.room:room-runtime:2.1.0-alpha04"
+//    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04" // use kapt for Kotlin
+
+    // optional - RxJava support for Room
+//    implementation "androidx.room:room-rxjava2:2.1.0-alpha04"
+//
+//    // optional - Guava support for Room, including Optional and ListenableFuture
+//    implementation "androidx.room:room-guava:2.1.0-alpha04"
+//
+//    // Test helpers
+//    testImplementation "androidx.room:room-testing:2.1.0-alpha04"
 }
