--- a/module_apis/build.gradle
+++ b/module_apis/build.gradle
@@ -72,21 +72,20 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.1'
     implementation project(':app_base')
     /* ARouter */
-    api "com.alibaba:arouter-api:1.4.1"
+    api 'com.alibaba:arouter-api:1.4.1'
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
     implementation files('libs/nanohttpd-2.3.1-SNAPSHOT.jar')
-    api files('libs/Msc.jar')
     /*  */
     implementation 'com.nex3z:flow-layout:1.2.4'
     /*  */
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    api files('libs/Msc.jar')
 }
