--- a/module_arouter_demo/build.gradle
+++ b/module_arouter_demo/build.gradle
@@ -72,11 +72,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.2-alpha01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.1'
+    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02"
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     implementation project(':app_base')
 
     /* ARouter */
