--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':catface_base', ':app', ':module_arouter_demo', ':app_base', ':module_apis', ':module_start' , ':module_api'
+include ':catface_base', ':app', ':module_arouter_demo', ':app_base', ':module_apis', ':module_start', ':module_work_demo', ':module_api'
