--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
     api "androidx.appcompat:appcompat:1.1.0-alpha04"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.2.0-alpha03"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha03"
+    androidTestImplementation "androidx.test:runner:1.2.0-alpha04"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha04"
     annotationProcessor 'androidx.annotation:annotation:1.0.2'
 
     api "com.google.android.material:material:1.1.0-alpha05"
@@ -104,4 +104,6 @@ dependencies {
     /**/
     debugApi "com.squareup.leakcanary:leakcanary-android:1.6.3"
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
+    /** 系统权限申请 */
+//    api 'com.github.dfqin:grantor:2.5'
 }
