--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -52,13 +52,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api "androidx.appcompat:appcompat:1.1.0-alpha04"
+    api "androidx.appcompat:appcompat:1.1.0-alpha05"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.2.0-alpha04"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha04"
+    androidTestImplementation "androidx.test:runner:1.2.0-beta01"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-beta01"
     annotationProcessor 'androidx.annotation:annotation:1.0.2'
 
-    api "com.google.android.material:material:1.1.0-alpha05"
+    api "com.google.android.material:material:1.1.0-alpha06"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
@@ -67,7 +67,7 @@ dependencies {
     api "com.alibaba:arouter-api:1.4.1"
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
     /**/
-    api "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44"
+    api "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46"
     /**/
     api "org.greenrobot:eventbus:3.1.1"
     /**/
@@ -79,8 +79,8 @@ dependencies {
     api "com.squareup.retrofit2:converter-gson:2.5.0"
     api "com.squareup.retrofit2:converter-scalars:2.3.0"
     /**/
-    api "io.reactivex.rxjava2:rxjava:2.2.4"
-    api "io.reactivex.rxjava2:rxandroid:2.1.0"
+    api "io.reactivex.rxjava2:rxjava:2.2.8"
+    api "io.reactivex.rxjava2:rxandroid:2.1.1"
     api 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     /**/
     api "com.squareup.retrofit2:adapter-rxjava:2.4.0"
@@ -93,8 +93,8 @@ dependencies {
     api "pl.droidsonroids.gif:android-gif-drawable:1.2.16"
     api "com.squareup.picasso:picasso:2.71828"
     api "com.facebook.fresco:fresco:1.11.0"
-    api "com.github.bumptech.glide:glide:4.8.0"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    api "com.github.bumptech.glide:glide:4.9.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.9.0"
     /**/
     api "cn.bingoogolapple:bga-qrcode-zxing:1.3.4"
     /**/
@@ -105,5 +105,9 @@ dependencies {
     debugApi "com.squareup.leakcanary:leakcanary-android:1.6.3"
     releaseApi "com.squareup.leakcanary:leakcanary-android-no-op:1.6.3"
     /** 系统权限申请 */
-//    api 'com.github.dfqin:grantor:2.5'
+    api('com.github.tbruyelle:rxpermissions:0.10.2') {
+        exclude group: "com.android.support"
+    }
+    /** 沉浸式 */
+    api 'com.gyf.immersionbar:immersionbar:3.0.0-beta04'
 }
