--- a/app_base/build.gradle
+++ b/app_base/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {    // ARouter
             annotationProcessorOptions {
@@ -37,10 +37,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.2.0-beta01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-beta01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
 
     api project(':catface_base')
