--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -9,7 +9,7 @@ android {
         versionCode 1
         versionName "0.1"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {    // ARouter
             annotationProcessorOptions {
@@ -52,19 +52,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api "androidx.appcompat:appcompat:1.1.0-alpha05"
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.2.0-beta01"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-beta01"
-    annotationProcessor 'androidx.annotation:annotation:1.0.2'
+    api "androidx.appcompat:appcompat:1.1.0-beta01"
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
-    api "com.google.android.material:material:1.1.0-alpha06"
+    api "com.google.android.material:material:1.1.0-alpha07"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
     /** 第三方依赖库集中 */
     /* ARouter */
-    api "com.alibaba:arouter-api:1.4.1"
+    api "com.alibaba:arouter-api:1.5.0"
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
     /**/
     api "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46"
