--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -52,10 +52,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api "androidx.appcompat:appcompat:1.1.0-beta01"
+    api "androidx.appcompat:appcompat:1.1.0-rc01"
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
-    api "com.google.android.material:material:1.1.0-alpha07"
+    api "com.google.android.material:material:1.1.0-alpha09"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
@@ -107,4 +107,7 @@ dependencies {
     }
     /** 沉浸式 */
     api 'com.gyf.immersionbar:immersionbar:3.0.0-beta04'
+
+    /** 自定义依赖 */
+    api 'com.github.itCatface:CTool:0.0.11'
 }
