--- a/module_apis/build.gradle
+++ b/module_apis/build.gradle
@@ -70,5 +70,8 @@ dependencies {
     implementation 'com.nex3z:flow-layout:1.2.4'
     /*  */
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    /* dagger案例 */
+    implementation 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
 
 }
