--- a/app_base/build.gradle
+++ b/app_base/build.gradle
@@ -2,17 +2,15 @@ apply plugin: 'com.android.library'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        javaCompileOptions {    // ARouter
+        javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
@@ -40,5 +38,4 @@ dependencies {
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
 
     api project(':catface_base')
-    api project(':ctool')
 }
