--- a/build.gradle
+++ b/build.gradle
@@ -9,16 +9,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
-        /* ARouter自动加载路由表 */
-        classpath "com.alibaba:arouter-register:1.0.2"
-
-        /* mob分享 */
-//        classpath 'com.mob.sdk:MobSDK:+'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.alibaba:arouter-register:1.0.2"  // ARouter自动加载路由表
     }
 }
 
