--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,14 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.mob.sdk'
+
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "0.1"
-
-//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true    // 64k
         javaCompileOptions {    // ARouter
@@ -62,38 +60,9 @@ dependencies {
     if (!rootProject.ext.debug_module_pj_iflytek) {
         implementation project(':module_pj_iflytek')
     }
+    if (!rootProject.ext.debug_module_pj_wechat) {
+        implementation project(':module_pj_wechat')
+    }
 
     implementation project(':app_base')
 }
-
-
-//MobSDK {
-//    appKey "2812e8836bbe2"
-//    appSecret "77c1da88debae5f264eade3cda5eab96"
-//
-//    ShareSDK {
-//        // 平台配置信息
-//        devInfo {
-//            SinaWeibo {
-//                appKey "2565941592"
-//                appSecret "038a30b8a1f4089c0619bdf25f0dbc0c"
-//                callbackUri "http://www.sharesdk.cn"
-//                shareByAppClient false
-//            }
-//            Wechat {
-//                appId "wx4868b35061f87885"
-//                appSecret "64020361b8ec4c99936c0e3999a9f249"
-//            }
-//            QQ {
-//                appId "100371282"
-//                appKey "aed9b0303e3ed1e27bae87c33761161d"
-//                shareByAppClient true
-//            }
-//            Facebook {
-//                appKey "1412473428822331"
-//                appSecret "a42f4f3f867dc947b9ed6020c2e93558"
-//                callbackUri "https://mob.com"
-//            }
-//        }
-//    }
-//}
