--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "0.1"
 
-//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        javaCompileOptions {    // ARouter
+        javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
@@ -52,10 +50,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api "androidx.appcompat:appcompat:1.1.0-rc01"
+    api "androidx.appcompat:appcompat:1.1.0"
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
-    api "com.google.android.material:material:1.1.0-alpha09"
+    api "com.google.android.material:material:1.1.0-alpha10"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
@@ -68,30 +66,30 @@ dependencies {
     /**/
     api "org.greenrobot:eventbus:3.1.1"
     /**/
-    api "com.squareup.okio:okio:1.15.0"
-    api "com.squareup.okhttp3:okhttp:3.12.0"
-    api "com.squareup.okhttp3:logging-interceptor:3.9.0"
+    api 'com.squareup.okio:okio:2.4.0'
+    api 'com.squareup.okhttp3:okhttp:4.2.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.2.0'
     /**/
-    api "com.squareup.retrofit2:retrofit:2.5.0"
-    api "com.squareup.retrofit2:converter-gson:2.5.0"
-    api "com.squareup.retrofit2:converter-scalars:2.3.0"
+    api 'com.squareup.retrofit2:retrofit:2.6.2'
+    api 'com.squareup.retrofit2:converter-gson:2.6.2'
+    api 'com.squareup.retrofit2:converter-scalars:2.6.2'
     /**/
-    api "io.reactivex.rxjava2:rxjava:2.2.8"
+    api 'io.reactivex.rxjava2:rxjava:2.2.12'
     api "io.reactivex.rxjava2:rxandroid:2.1.1"
-    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    api 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
     /**/
-    api "com.squareup.retrofit2:adapter-rxjava:2.4.0"
-    api "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+    api 'com.squareup.retrofit2:adapter-rxjava:2.6.2'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
     /**/
-    api "com.jakewharton.rxbinding:rxbinding:1.0.0"
-    api "com.jakewharton.rxbinding:rxbinding-support-v4:1.0.0"
-    api "com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.0"
+    api 'com.jakewharton.rxbinding:rxbinding:1.0.1'
+    api 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.1'
+    api 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.1'
     /**/
-    api "pl.droidsonroids.gif:android-gif-drawable:1.2.16"
+    api 'pl.droidsonroids.gif:android-gif-drawable:1.2.18'
     api "com.squareup.picasso:picasso:2.71828"
-    api "com.facebook.fresco:fresco:1.11.0"
-    api "com.github.bumptech.glide:glide:4.9.0"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.9.0"
+    api 'com.facebook.fresco:fresco:2.0.0'
+    api 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     /**/
     api "cn.bingoogolapple:bga-qrcode-zxing:1.3.4"
     /**/
@@ -109,5 +107,8 @@ dependencies {
     api 'com.gyf.immersionbar:immersionbar:3.0.0-beta04'
 
     /** 自定义依赖 */
-    api 'com.github.itCatface:CTool:0.0.11'
+//    api 'com.github.itCatface:CTool:0.0.11'
+    api project(':ctool')
+    /** 动画lottie */
+    api 'com.airbnb.android:lottie:3.0.7'
 }
