--- a/module_pj_wanandroid/build.gradle
+++ b/module_pj_wanandroid/build.gradle
@@ -5,18 +5,16 @@ if (rootProject.ext.debug_module_pj_wanandroid) {
 }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-        multiDexEnabled true    // 64k
-        javaCompileOptions {    // ARouter
+        multiDexEnabled true
+        javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
@@ -60,7 +58,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
-    annotationProcessor "com.alibaba:arouter-compiler:1.2.2"    // ARouter
+    annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
 
     implementation project(':app_base')
 }
