--- a/ctool/src/main/AndroidManifest.xml
+++ b/ctool/src/main/AndroidManifest.xml
@@ -1,5 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cc.catface.ctool">
-
-    <uses-permission android:name="android.permission.VIBRATE" />
-</manifest>
+    package="cc.catface.ctool" />
