--- a/app_base/build.gradle
+++ b/app_base/build.gradle
@@ -16,7 +16,9 @@ android {
             }
         }
     }
-
+    dataBinding {
+        enabled = true
+    }
     buildTypes {
         release {
             minifyEnabled false
