--- a/catface_base/build.gradle
+++ b/catface_base/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     api "androidx.appcompat:appcompat:1.1.0"
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
-    api "com.google.android.material:material:1.2.0-alpha01"
+    api "com.google.android.material:material:1.2.0-alpha02"
     /**/
     api "androidx.multidex:multidex:2.0.1"
 
@@ -90,6 +90,8 @@ dependencies {
     api 'com.facebook.fresco:fresco:2.0.0'
     api 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    /**/
+    api 'com.google.zxing:core:3.3.0'
     /**/
     api "cn.bingoogolapple:bga-qrcode-zxing:1.3.4"
     /**/
