--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,13 @@
         android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_name_app"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:allowBackup">
-        <uses-library
-            android:name="org.apache.http.legacy"
-            android:required="false" />
-        <meta-data
-            android:name="android.max_aspect"
-            android:value="2.4" />
-    </application>
+        tools:replace="android:allowBackup" />
 
 </manifest>
