添加转场动画app | 添加room数据库操作(接下来看看自定义数据库文件位置)

--- a/module_pj_showapi/src/main/AndroidManifest.xml
+++ b/module_pj_showapi/src/main/AndroidManifest.xml
@@ -3,6 +3,6 @@
 
     <application>
         <activity android:name=".ShowapiMainActivity" />
-        <activity android:name=".joke.mvp.view.ShowAPIActivity" />
+        <activity android:name=".joke.mvp.view.JokeActivity" />
     </application>
 </manifest>
