--- a/module_api/build.gradle
+++ b/module_api/build.gradle
@@ -22,9 +22,21 @@ android {
         if (rootProject.ext.debug_module_api) {
             applicationId "cc.catface.api"
         }
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                //room的数据库概要、记录
+//                arguments = ["room.schemaLocation":
+//                                     "$projectDir/schemas".toString()]
+//            }
+//        }
     }
 
     sourceSets {
+        //数据库概要、记录存放位置
+//        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
         main {
             if (rootProject.ext.debug_module_api) {
                 manifest.srcFile 'src/main/debug/AndroidManifest.xml'
@@ -56,6 +68,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
     annotationProcessor "com.alibaba:arouter-compiler:1.2.2"
