--- a/module_pj_iflytek/src/main/AndroidManifest.xml
+++ b/module_pj_iflytek/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         <activity android:name=".iflytek.IflytekIatActivity" />
         <activity android:name=".iflytek.IflytekTtsActivity" />
         <activity android:name=".AiuiActivity" />
+        <activity android:name=".iflytek.OCRPrintWebActivity" />
 
         <service android:name=".service.AIUIServer" />
     </application>
