--- a/module_pj_iflytek/src/main/debug/AndroidManifest.xml
+++ b/module_pj_iflytek/src/main/debug/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
         android:name=".IflytekApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -25,6 +25,7 @@
         <activity android:name=".iflytek.IflytekIatActivity" />
         <activity android:name=".AiuiActivity" />
         <activity android:name=".iflytek.IflytekTtsActivity" />
+        <activity android:name=".iflytek.OCRPrintWebActivity" />
 
         <service android:name=".service.AIUIServer" />
     </application>
