添加camerax alpha版本，不不不推荐使用

--- a/module_api/src/main/AndroidManifest.xml
+++ b/module_api/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
         <activity android:name=".view.anim_activity_transfer.test.MainActivity" />
         <activity android:name=".view.anim_activity_transfer.test.Num2Activity" />
+        <activity android:name=".hardware.camerax.CameraXActivity" />
         <activity
             android:name=".ApiHolderActivity"
             android:windowSoftInputMode="adjustPan" />
