--- a/module_api/build.gradle
+++ b/module_api/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -82,6 +82,10 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
 
     // room
-    implementation "androidx.room:room-runtime:2.1.0"
-    annotationProcessor "androidx.room:room-compiler:2.1.0" // use kapt for Kotlin
+    implementation "androidx.room:room-runtime:2.2.3"
+    annotationProcessor "androidx.room:room-compiler:2.2.3" // use kapt for Kotlin
+
+    // camerax
+    implementation "androidx.camera:camera-core:1.0.0-alpha01"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha01"
 }
