--- a/module_pj_iflytek/build.gradle
+++ b/module_pj_iflytek/build.gradle
@@ -69,4 +69,6 @@ dependencies {
     implementation files('libs/additionnal.jar')
     api files('libs/Msc.jar')
     implementation files('libs/commons-codec-1.13.jar')
+    implementation files('libs/AMap_Location_V4.7.0_20190708.jar')
+    implementation files('libs/AMap_Search_V6.9.2_20190709.jar')
 }
