--- a/module_pj_iflytek/src/main/AndroidManifest.xml
+++ b/module_pj_iflytek/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
         <activity android:name=".iflytek.IflytekIatActivity" />
         <activity android:name=".iflytek.IflytekTtsActivity" />
         <activity android:name=".AiuiActivity" />
-        <activity android:name=".iflytek.OCRPrintWebActivity" />
-        <activity android:name=".iflytek.AmapActivity" />
+        <activity android:name=".iflytek.IflytekOCRPrintWebActivity" />
+        <activity android:name=".iflytek.IflytekAmapActivity" />
 
         <service android:name=".service.AIUIServer" />
 
