--- a/module_pj_iflytek/src/main/debug/AndroidManifest.xml
+++ b/module_pj_iflytek/src/main/debug/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".iflytek.IflytekIatActivity" />
-        <activity android:name=".AiuiActivity" />
+        <activity android:name=".iflytek.IflytekAiuiActivity" />
         <activity android:name=".iflytek.IflytekTtsActivity" />
         <activity android:name=".iflytek.IflytekOCRPrintWebActivity" />
 
