--- a/module_pj_iflytek/src/main/debug/AndroidManifest.xml
+++ b/module_pj_iflytek/src/main/debug/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".iflytek.IflytekTtsActivity" />
         <activity android:name=".iflytek.IflytekOCRPrintWebActivity" />
 
-        <service android:name=".service.AIUIServer" />
+        <service android:name=".service.AIUIService" />
     </application>
 
 </manifest>
