--- a/ctool/src/main/AndroidManifest.xml
+++ b/ctool/src/main/AndroidManifest.xml
@@ -1,1 +1,5 @@
-<manifest package="cc.catface.ctool" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="cc.catface.ctool">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
