--- a/demo_provider/app_provider_provider/build.gradle
+++ b/demo_provider/app_provider_provider/build.gradle
@@ -4,24 +4,38 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "cc.catface.app_aidl_service"
+        applicationId "cc.catface.app_provider_provider"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     // ViewModel and LiveData
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     // Java8 support for Lifecycles
     api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
+
+
+    implementation project(':ctool')
+    implementation project(':catface_base')
+    // room
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5" // use kapt for Kotlin
 }
