mmkv案例独立为app

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+// mmkv使用案例
+include 'demo_mmkv:app_mmkv_demo'
 // provider使用案例
 include 'demo_provider:app_provider_client', 'demo_provider:app_provider_provider'
 // aidl使用案例
