--- a/demo_provider/app_provider_client/build.gradle
+++ b/demo_provider/app_provider_client/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     // Java8 support for Lifecycles
     api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
 
+    implementation project(':ctool')
 }
